--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-symbols": "^0.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
